v2 | add New Chat button with history + refactored var names in ChatService